-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.4.0-rc1
-
None
bool isTrue(); int c() { isTrue(); // OK, () added to completed "isTrue" true && isTrue(); // Ops, () not added to completed "isTrue" }
For Gerrit Dashboard: QTCREATORBUG-18656 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
201355,7 | Clang: fix regression in paren autocompletion | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |