Clang: fix regression in paren autocompletion

Limit the cases when paren is not added
after function name completion

Task-number: QTCREATORBUG-18656
Change-Id: Ibdf1e9c1d7d7b400c1c853e0bb81622e52729cfa
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>